--- a/app/templates/app/post_detail.html
+++ b/app/templates/app/post_detail.html
@@ -10,6 +10,8 @@
   <a href="{% url 'post_edit' post_data.id %}" class="btn btn-warning mr-2"
     >編集する</a
   >
-  <a href="" class="btn btn-danger">削除する</a>
+  <a href="{% url 'post_delete' post_data.id %}" class="btn btn-danger"
+    >削除する</a
+  >
 </div>
 {% endif %} {% endblock %}
