--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -30,7 +30,9 @@
           </li>
           {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="">サインアップ</a>
+            <a class="nav-link" href="{% url 'account_signup' %}"
+              >サインアップ</a
+            >
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'account_login' %}">ログイン</a>
