--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -21,3 +21,12 @@ main {
 .card-title {
   margin-bottom: 10px;
 }
+.index-img {
+  object-fit: cover;
+  height: 240px;
+}
+.detail-img {
+  object-fit: cover;
+  width: 100%;
+  height: 400px;
+}
