--- a/app/templates/app/post_form.html
+++ b/app/templates/app/post_form.html
@@ -2,11 +2,12 @@
 <div class="my-4">
   <h2>投稿</h2>
 </div>
-<form method="post">
+<form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="formpost" style="margin-bottom: 10px">
     {% render_field form.title class="form" placeholder="タイトルを入力" %}
   </div>
+  <div class="formpost">{{form.image}}</div>
   <div class="formpost" style="margin-bottom: 10px">
     {% render_field form.content class="form" placeholder="本文を入力" %}
   </div>
