カテゴリ機能作成

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -7,7 +7,9 @@
       <img src="{{post.image.url}}" class="card-img-top index-img" />
       {% endif %}
       <div class="card-body">
-        <h2 class="card-title">{{post.title}}</h2>
+        <h2 class="card-title">
+          {{post.title}} <span class="small"> - {{post.category}}</span>
+        </h2>
         <p class="card-text">{{post.content|truncatechars:100}}</p>
         <div class="btn btn-warning">詳細</div>
       </div>
@@ -29,6 +31,22 @@
         <p class="mb-0">
           リポジトリのプルリクにDjangoコードの詳細や機能について書いた
         </p>
+      </div>
+    </div>
+    <div class="card my-4">
+      <h5 class="card-header">カテゴリ</h5>
+      <div class="card-body">
+        <div class="row">
+          {% for category in category_data %}
+          <div class="col-md-6">
+            <ul class="list-unstyled">
+              <li>
+                <a href="{% url 'category' category %}"> {{category.name}} </a>
+              </li>
+            </ul>
+          </div>
+          {% endfor %}
+        </div>
       </div>
     </div>
   </div>
