--- a/app/templates/app/post_form.html
+++ b/app/templates/app/post_form.html
@@ -7,6 +7,9 @@
   <div class="formpost" style="margin-bottom: 10px">
     {% render_field form.title class="form" placeholder="タイトルを入力" %}
   </div>
+  <div class="formpost" style="margin-bottom: 10px">
+    {% render_field form.category class="form" placeholder="カテゴリを入力" %}
+  </div>
   <div class="formpost">{{form.image}}</div>
   <div class="formpost" style="margin-bottom: 10px">
     {% render_field form.content class="form" placeholder="本文を入力" %}
