--- a/app/templates/app/post_detail.html
+++ b/app/templates/app/post_detail.html
@@ -1,5 +1,6 @@
 {% extends "app/base.html" %} {% block content %}
 <h2 class="my-4">{{post_data.title}}</h2>
+<p>{{post_data.category}}</p>
 <hr />
 <p>{{post_data.created}} by {{post_data.author}}</p>
 <hr />
