検索機能作成

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,7 +1,9 @@
 {% extends "app/base.html" %} {% block content %}
 <div class="row my-4">
   <div class="col md-8">
-    {% for post in post_data %}
+    {% if keyword %}
+    <h4 class="mb-4">「{{keyword}}の検索結果」</h4>
+    {% endif %} {% for post in post_data %}
     <div class="card mb-4">
       {% if post.image %}
       <img src="{{post.image.url}}" class="card-img-top index-img" />
@@ -48,6 +50,18 @@
           {% endfor %}
         </div>
       </div>
+    </div>
+    <div class="card-my-4">
+      <h5 class="card-header">検索</h5>
+      <form action="{% url 'search' %}" method="get" class="input-group">
+        <input
+          type="text"
+          class="form-control"
+          name="keyword"
+          placeholder="ブログを検索"
+        />
+        <button class="btn btn-warning ml-2" type="submit">検索</button>
+      </form>
     </div>
   </div>
 </div>
